# direct_ui_rendering

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
android/: AndroidManifest.xml
android/res/values/: strings.xml
cmake/: package_apk.cmake
scripts/: build.sh  commit.sh  ralph.sh  run.sh  test.sh
shaders/: common.glsl  composite.frag  quad.vert  room.frag  room.vert  shadow.vert  surface.frag  ubo_structs.glsl  ui.frag  ui_direct.frag  ui_direct.vert  ui_ortho.vert
spec/: LOOP.md  PROGERSS.md  PROGRESS.md  SPEC.md  direct_ui_rendering.md  ralph.sh
src/: app.cpp  app.h  main.cpp  metrics.cpp  metrics.h  msaa_config.h  platform.h  renderer.cpp  renderer.h  renderer_init.cpp  renderer_pipelines.cpp  renderer_recording.cpp  renderer_renderpasses.cpp  renderer_resources.cpp  scene.cpp  scene.h  shader_uniforms.h  ui_surface.cpp  ui_surface.h  ui_system.cpp  ui_system.h  vk_utils.h
tests/: CMakeLists.txt  containment_fixture.h  perf_reference.h  render_helpers.h  scene_ubo_helper.h  sdf_render_fixture.h  test_ambient_animation.cpp  test_ambient_shadows.cpp  test_android_platform.cpp  test_app_helper.h  test_app_input.cpp  test_clip_planes.cpp  test_command_line.cpp  test_containment.cpp  test_depth_bias.cpp  test_direct_ui_normal.cpp  test_floor_ripple.cpp  test_hud.cpp  test_light_intensity.cpp  test_math.cpp  test_matrix_math.cpp  test_metallic_materials.cpp  test_metrics.cpp  test_msaa_quality.cpp  test_pbr.cpp  test_perf.cpp  test_pixel_helpers.h  test_renderer.cpp  test_scale_render.cpp  test_scene.cpp  test_sdf.cpp  test_shadow_acne_walls.cpp  test_shadow_render.cpp  test_spotlight_cone.cpp  test_static_floor_ceiling.cpp  test_surface_face_lighting.cpp  test_traditional_lighting.cpp  test_transforms.cpp  test_ui_color_animation.cpp  test_ui_cube_shadow.cpp  (+3 more)
tests/shaders/: ui_direct_static.frag
